--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,8 +25,9 @@
         <activity
             android:name=".activity.SignupActivity"
             android:exported="false" />
-        <activity android:name=".activity.MainActivity"
-            android:exported="false"/>
+        <activity
+            android:name=".activity.MainActivity"
+            android:exported="false" />
         <activity
             android:name=".activity.LoginActivity"
             android:exported="true">
